# auroraMUD

./: .gitignore  README.md  pyproject.toml
auroramud/: __main__.py  game.py  server.py
auroramud/entities/: entity.py  player.py
