[tool.poetry]
name = "auroramud"
version = "0.1.0"
description = "a sci-fi MUD inspired by EmpireMUD"
authors = ["eagle_eyed <blind.lightning.productions@gmail.com>"]
license = "GPL-3.0-latest"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
